syntax = "proto3";

package proto;
option go_package="./proto";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetingRequest {
  Greeting greeting = 1;
}

message GreetingResponse {
  string Result = 1;
}

service GreetService{
  // Unary
  rpc Greet(GreetingRequest) returns (GreetingResponse) {};
}